--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+codespell==2.4.0
 colorama==0.4.6
 Flask==3.1.0
 Flask-Cors==5.0.0
